# inferlab

./: .gitignore  pyproject.toml
inferlab/: datasets.py  estimation.py  hypothesis_tests.py  intervals.py
tests/: test_datasets.py  test_estimation.py  test_hypothesis_tests.py  test_intervals.py
