[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inferlab"
version = "0.1.0"
description = "Inferenzstatistik-Bibliothek zur Vorlesung Statistik WS 2025/26"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "statsmodels>=0.14"]